# hass-rs

./: .gitignore  Cargo.toml
src/: automation.rs  hass.rs  lib.rs  main.rs  websocket.rs
src/types/: command.rs  mod.rs  response.rs
