[package]
name = "hass-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures-channel = "0.3.27"
futures-util = "0.3.27"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"]}
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
tokio-util = "0.7.7"
url = "*"
